--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ mypy==0.761
 mypy-extensions==0.4.3
 packaging==20.1
 pluggy==0.13.1
+psycopg2==2.8.4
 py==1.8.1
 pycodestyle==2.5.0
 pyflakes==2.1.1
