--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.1",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.28",
+    "@testing-library/user-event": "^10.0.0",
+    "@types/jest": "^25.1.3",
+    "@types/node": "^13.7.4",
     "@types/react": "^16.9.22",
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.26.32",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "formik": "^2.1.4",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
     "node-sass": "^4.13.1",
@@ -22,10 +24,12 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-intl": "^3.12.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.2",
+    "yup": "^0.28.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -36,7 +40,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "i18n": "node extract_i18n_messages.js"
   },
   "eslintConfig": {
     "extends": "react-app",
@@ -67,5 +72,8 @@
       "pre-commit": "lint-staged"
     }
   },
-  "proxy": "http://localhost:8000"
+  "proxy": "http://localhost:8000",
+  "devDependencies": {
+    "typescript-react-intl": "^0.4.1"
+  }
 }
