--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/yup": "^0.26.32",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "flag-icon-css": "^3.4.6",
     "formik": "^2.1.4",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
