--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^10.0.0",
     "@types/jest": "^25.1.3",
+    "@types/lodash": "^4.14.149",
     "@types/node": "^13.7.4",
     "@types/react": "^16.9.22",
     "@types/react-bootstrap": "^0.32.20",
@@ -20,6 +21,7 @@
     "formik": "^2.1.4",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
