--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,7 +44,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "i18n": "node extract_i18n_messages.js"
+    "i18n-extract": "node extract_i18n_messages.js",
+    "i18n-update": "node update_i18n_files.js"
   },
   "eslintConfig": {
     "extends": "react-app",
