--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,9 @@ pytest==5.3.5
 pytz==2019.3
 seval==1.1.0
 six==1.14.0
-sqlparse==0.3.0
+sqlparse==0.3.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.1
 wcwidth==0.1.8
+whitenoise==5.0.1
 zipp==3.0.0
