--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Django==3.0.3
 django-filter==2.2.0
 django-stubs==1.4.0
 djangorestframework==3.11.0
+djangorestframework-filters==1.0.0.dev0
 djangorestframework-stubs==1.1.0
 entrypoints==0.3
 flake8==3.7.9
