--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.1.1",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^10.0.0",
-    "@types/jest": "^25.1.3",
+    "@types/jest": "^25.1.4",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^13.7.7",
+    "@types/node": "^13.9.0",
     "@types/react": "^16.9.23",
     "@types/react-bootstrap": "^0.32.20",
     "@types/react-dom": "^16.9.5",
@@ -27,12 +27,13 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
-    "react-intl": "^3.12.0",
+    "react-intl": "^4.1.1",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "typedoc": "^0.16.11",
     "typescript": "^3.8.3",
-    "yup": "^0.28.1"
+    "yup": "^0.28.3"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
@@ -45,7 +46,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "i18n-extract": "node extract_i18n_messages.js",
-    "i18n-update": "node update_i18n_files.js"
+    "i18n-update": "node update_i18n_files.js",
+    "doc": "typedoc --out docs src"
   },
   "eslintConfig": {
     "extends": "react-app",
