--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,14 @@ asgiref==3.2.7
 attrs==19.3.0
 certifi==2020.4.5.1
 chardet==3.0.4
-Django==3.0.6
-django-filter==2.2.0
+Django==3.0.7
+django-filter==2.3.0
 django-stubs==1.5.0
 djangorestframework==3.11.0
 djangorestframework-filters==1.0.0.dev0
-djangorestframework-stubs==1.1.0
+djangorestframework-stubs==1.2.0
 entrypoints==0.3
-flake8==3.8.1
+flake8==3.8.2
 idna==2.9
 importlib-metadata==1.6.0
 Markdown==3.2.2
@@ -17,6 +17,7 @@ mccabe==0.6.1
 more-itertools==8.3.0
 mypy==0.770
 mypy-extensions==0.4.3
+numpy==1.18.5
 packaging==20.4
 Pillow==7.1.2
 pluggy==0.13.1
@@ -25,15 +26,15 @@ py==1.8.1
 pycodestyle==2.6.0
 pyflakes==2.2.0
 pyparsing==2.4.7
-pytest==5.4.2
+pytest==5.4.3
 pytz==2020.1
 requests==2.23.0
 seval==1.1.0
-six==1.14.0
+six==1.15.0
 sqlparse==0.3.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.2
 urllib3==1.25.9
-wcwidth==0.1.9
+wcwidth==0.2.3
 whitenoise==5.1.0
 zipp==3.1.0
